--- a/笔记201611680049.ipynb
+++ b/笔记201611680049.ipynb
@@ -4,12 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 写helloworld程序，保存成ipynb格式。格式：学号.ipynb"
+    "# Steps \n",
+    "- 下载 [Python](https://www.python.org/)\n",
+    "- 安装  Python\n",
+    "- 打开  *Powershell* 输入 **pip install jupyter notebook** 安装 jupyter notebook \n",
+    "- 打开 jupyter notebook\n",
+    "  - 点击 *new* \n",
+    "  - 点击 *Python 3*\n",
+    "- 输入:\n",
+    "  > print('hello world')\n",
+    "1. **Ctrl-Enter** run selected cells\n",
+    "2. **Enter** enter edit mode\n",
+    "3. **Y** to code\n",
+    "4. **M** to markdown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -24,34 +36,6 @@
    ],
    "source": [
     "print('hello world')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "初めまして　My name is Zhang Yixin\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('初めまして　My name is Zhang Yixin')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Nice to meet you!** *どぞよろしくお願いします*\n",
-    "~~I'm not good at Python at all!~~\n",
-    "> ぺセンがとても下手です"
    ]
   }
  ],
